--- a/machine.html
+++ b/machine.html
@@ -174,7 +174,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -209,7 +209,7 @@ Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p
 processing experience to join the ACV Labs team, working on a variety of cutting 
 edge?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/clarifai/jobs/1784298?gh_jid=1784298'>Job Application for Applied Machine Learning Engineer at Clarifai</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clarifai/jobs/1784298?gh_jid=1784298'>Job Application for Applied Machine Learning Engineer at Clarifai</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... You'll join our Applied Machine Learning Team and help our team drive customer 
 acquisition and revenue growth in 2019. You value collaboration and want to?...</p>
@@ -244,7 +244,7 @@ a career change to somewhere where you can really make a difference,?...</p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/gateway.do?functionName=viewFromLink&jobPostId=42820&localeCode=en-us'>Director of Applied Machine Learning - San Jose CA 95134 - ARM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/gateway.do?functionName=viewFromLink&jobPostId=42820&localeCode=en-us'>Director of Applied Machine Learning - San Jose CA 95134 - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Business Analyst-Finance San Jose (CA); Business Development Director San 
 Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?...</p>
@@ -286,7 +286,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -314,7 +314,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Senior Machine Learning Engineer at Codete.</p>
 <hr/>
-<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Machine Learning / AI / Big Data Engineer, Athens at 
 Atypon Systems.</p>
@@ -334,7 +334,7 @@ or?...</p>
 <p>3 days ago ... As a member of EY's core Tax practice, you'll develop a deep tax technical 
 knowledge and outstanding database, data analytics and programming skills.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/featurespace/jobs/1783455'>Job Application for Machine Learning Engineer US at Featurespace</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/featurespace/jobs/1783455'>Job Application for Machine Learning Engineer US at Featurespace</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -342,7 +342,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
+<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -453,7 +453,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4347100002'>Job Application for Senior Machine Learning Engineer at Toyota ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4347100002'>Job Application for Senior Machine Learning Engineer at Toyota ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Develop solutions using Machine Learning/Deep Learning and other advanced 
 technologies to solve a variety of problems; Translate user stories and business?...</p>
@@ -462,7 +462,7 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4342007002'>Job Application for Machine Learning Manager, Safety Product at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4342007002'>Job Application for Machine Learning Manager, Safety Product at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
